# RAGBoost

./: .dockerignore  Dockerfile  README.md  pyproject.toml  pytest.ini  test_deduplication.py  test_incremental_build.py  test_multi_turn_e2e.py
docs/: BATCH_WORKFLOW.md  MULTI_TURN.md  PIPELINE_API.md  QUICK_START.md  README.md  troubleshooting.md
docs/getting_started/: installation.md  quickstart.md
docs/guides/: benchmarking.md  multi_turn.md  offline_usage.md  online_usage.md
docs/reference/: api.md  benchmarks.md
examples/: README.md  concurrent_first_then_multiturn_example.py  http_server_example.py  multi_turn_example.py  pipeline_examples.py  stateless_batch_example.py
examples/batch_inference/: README.md  analyze_results.py  prepare_batch.py  sglang_inference.py
examples/construct_rag_data/: multihopRAG_bm25.py  multihopRAG_faiss.py
patches/sglang/: README.md  apply_patch.sh  cache_init_params.py  common.py
ragboost/: __init__.py
ragboost/context_index/: compute_distance_cpu.py  index_construction.py
ragboost/context_ordering/: inter_scheduler.py
ragboost/pipeline/: __init__.py  components.py  rag_pipeline.py
ragboost/retriever/: __init__.py
ragboost/server/: __init__.py  http_client.py  http_server.py  live_index.py
ragboost/utils/: __init__.py  prompt_generator.py
scripts/: benchmark.py
tests/: conftest.py  test_context_index.py  test_context_ordering.py  test_cpu_distances.py  test_gpu_distance_performance.py  test_gpu_distances.py  test_group_prefix_sharing.py  test_live_index.py  test_multi_turn.py  test_multi_turn_e2e.py  test_performance.py  test_pipeline.py  test_server_integration.py
