[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ragboost"
version = "0.2.0"
description = "Boosting Retrieval-Augmented Generation with Context Reordering"
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "Yinsicheng Jiang" }, { name = "Chivier Humber" }]
license = { text = "MIT" }
keywords = ["feed", "reader", "tutorial"]
dynamic = ["dependencies"]  # <- pull from requirements.txt

[tool.setuptools.packages.find]
include = ["ragboost*"]

[tool.setuptools.dynamic]
dependencies = { file = ["requirements.txt"] }

[project.urls]
Homepage = "https://github.com/SecretSettler/RAGBoost"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = ["-v", "--tb=short", "--strict-markers", "--import-mode=importlib"]
asyncio_mode = "auto"
timeout = 300
minversion = "7.0"
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "gpu: marks tests that require GPU",
    "integration: marks integration tests",
    "unit: marks unit tests",
]
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::PendingDeprecationWarning",
]

[project.optional-dependencies]
dev = ["black", "bumpver", "isort", "pip-tools", "pytest", "ipython"]

[tool.bumpver]
current_version = "1.5.2"
version_pattern = "MAJOR.MINOR.PATCH"
commit_message  = "Bump version {old_version} -> {new_version}"
commit          = true
tag             = true
push            = false

[tool.bumpver.file_patterns]
"pyproject.toml" = ['current_version = "{version}"', 'version = "{version}"']

[tool.black]
line-length = 120
target-version = ['py310', 'py311', 'py312']

[tool.isort]
profile = "black"
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
line_length = 88